remove unnecessary background component; fix issue with browser card descriptions messing with screen size when not visible

--- a/src/components/gameBrowser/gameBrowserCard/GameBrowserCard.css
+++ b/src/components/gameBrowser/gameBrowserCard/GameBrowserCard.css
@@ -52,9 +52,11 @@ div.game-browser-card-wrapper-inner:hover {
 p.game-browser-description {
   opacity: 0;
   text-align: left;
+  font-size: 0rem;
 }
 
 div.game-browser-card-wrapper-inner:hover p.game-browser-description {
   opacity: 1;
-  transition: opacity 0.8s 0.3s;
+  transition: opacity 0.8s 0.3s, font-size 0.1s;
+  font-size: 1rem;
 }
